--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recall": "^0.0.3",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
